--- a/思路.md
+++ b/思路.md
@@ -1,6 +1,3 @@
-从项目结构、功能描述及代码片段推测，作者编写该Qt6下载器的思路和实现顺序如下，核心遵循“基础框架→核心功能→扩展功能→体验优化”的递进逻辑：
-
-
 ### **1. 搭建基础工程框架（起步阶段）**
 **目标**：建立可运行的Qt项目骨架，确定技术栈和基础配置。  
 **实现内容**：  
@@ -51,7 +48,7 @@
 **目标**：保存用户配置（如下载路径、线程数、监听端口），支持配置读取/写入。  
 **实现内容**：  
 - 编写`settingsmanager.h/.cpp`，采用单例模式，基于`QSettings`存储配置（如默认下载路径、最大线程数、本地服务器端口）。  
-- 提供配置加载（`loadLocalListenPort`等方法）和保存接口，供其他模块（如主窗口、本地服务器）调用。  
+- 提供配置加载和保存接口，供其他模块（如主窗口、本地服务器）调用。  
 
 **原因**：用户配置需要持久化，单例模式可确保全局配置一致性，是后续扩展功能的基础。
 
@@ -68,10 +65,10 @@
 ### **8. 实现历史记录管理（数据持久化）**
 **目标**：记录已完成的下载任务，支持查询历史。  
 **实现内容**：  
-- 编写`historymanager.h/.cpp`，基于Qt的`QSql`模块操作SQLite数据库，存储任务信息（URL、文件名、完成时间、大小等）。  
+- 编写`historymanager.h/.cpp`，基于Qt的`QJson`模块操作JSON，存储任务信息（URL、文件名、完成时间、大小等）。  
 - 提供添加历史记录、查询历史、删除记录的接口，关联`DownloadTask`（任务完成后自动写入历史）。  
 
-**原因**：历史记录是提升用户体验的基础功能，需在下载任务可正常完成后实现（README提到“保存不了”，推测此阶段可能存在数据库操作bug）。
+**原因**：历史记录是提升用户体验的基础功能，需在下载任务可正常完成后实现
 
 
 ### **9. 开发系统托盘功能（体验优化）**
@@ -109,7 +106,3 @@
 **原因**：国际化和主题属于后期体验优化，需在核心功能无重大bug后完善（README提到“有俩键翻译不了”，推测是翻译文件未完全覆盖）。
 
 
-### **总结：核心逻辑链**  
-从“能下载”到“好用”逐步递进：  
-基础框架 → 界面载体 → 网络通信 → 单任务管理 → 多任务调度 → 配置与输入 → 历史记录 → 体验优化（托盘、浏览器集成） → 本地化与主题。  
-整体符合“先跑通核心流程，再迭代优化功能”的开发逻辑，同时也体现了作者在代码质量（如“线程管理混乱”“历史记录保存失败”）上的妥协（“能用就行”）。
